--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
-MONGO_URL=
-DOMAIN=
-TOKEN_SECRET=https://localhost:3000
+MONGO_URL=mongodb+srv://drumilhvedmogodbcloudservice:lymHJr7N9Prt6iT3@misterymessage.j2omfri.mongodb.net/?retryWrites=true&w=majority&appName=misteryMessage
+DOMAIN=https://localhost:3000
+TOKEN_SECRET=
+NODEMAILER_USER=b9f480bb1b46f6
+NODEMAILER_PASS=34432975d77458
+NODEMAILER_PORT=2525
+NODEMAILER_HOST="sandbox.smtp.mailtrap.io"
