sign up working

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MONGO_URL=mongodb+srv://drumilhvedmogodbcloudservice:lymHJr7N9Prt6iT3@misterymessage.j2omfri.mongodb.net/?retryWrites=true&w=majority&appName=misteryMessage
+MONGO_URL=mongodb+srv://drumilhvedmogodbcloudservice:g7T90fSragQ79Tt0@misterymessage.j2omfri.mongodb.net/?retryWrites=true&w=majority&appName=misteryMessage
 DOMAIN=https://localhost:3000
-TOKEN_SECRET=
+TOKEN_SECRET=ABCDEFGHIJK1QWERFVGBHNM
 NODEMAILER_USER=b9f480bb1b46f6
 NODEMAILER_PASS=34432975d77458
 NODEMAILER_PORT=2525
